# SortingAlgs

./: .gitignore  CMakeLists.txt  Main.c  README.md  main.c
include/: Sortings.h  Tools.h  sortings.h  tools.h
source/: CMakeLists.txt  CMakeLists.txt~  Sortings.c  Tools.c  sortings.c  tools.c
test/: CMakeLists.txt  selectionSortTest.cpp
test/include/: TestTools.hpp  test_tools.hpp
test/source/: SortingAlgoTests.cpp  bubbleSortTest.cpp  selectionSortTest.cpp  sortingAlgoTests.cpp
